<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jzh.wanandroid.ui.main.MainActivity">

    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_color" />

    <com.chaychan.library.BottomBarLayout
        android:id="@+id/bbl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconNormal="@drawable/tab_home_normal"
            app:iconSelected="@drawable/tab_home_selected"
            app:itemText="首页"
            app:itemTextSize="13sp"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color" />

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconNormal="@drawable/project_not_select"
            app:iconSelected="@drawable/project"
            app:itemText="@string/project"
            app:itemTextSize="13sp"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color" />

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconNormal="@drawable/knowledge_not_select"
            app:iconSelected="@drawable/knowledge_select"
            app:itemText="@string/knowledge"
            app:itemTextSize="13sp"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color" />

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconNormal="@drawable/navigation_not_select"
            app:iconSelected="@drawable/navigation_select"
            app:itemText="@string/navigation"
            app:itemTextSize="13sp"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color" />

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconNormal="@drawable/todo_not_select"
            app:iconSelected="@drawable/todo_select"
            app:itemText="@string/todo"
            app:itemTextSize="13sp"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color" />
    </com.chaychan.library.BottomBarLayout>
</LinearLayout>
