<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textColor="#101010"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/shadow_bg"
        android:elevation="4dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="40dp"
            android:background="@mipmap/ic_launcher" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:hint="@string/tv_account"
            android:imeOptions="actionNext"
            android:maxLength="11"
            android:maxLines="1"
            android:textColorHint="@color/hintcolor"
            android:textCursorDrawable="@drawable/text_cursor_base"
            android:textSize="16sp"
            app:met_clearButton="true"
            app:met_iconLeft="@drawable/icon_account"
            app:met_iconPadding="2dp"
            app:met_maxCharacters="11"
            app:met_primaryColor="@color/bg_select_color"
            app:met_singleLineEllipsis="true"
            app:met_underlineColor="@color/black" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_psd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:hint="@string/tv_psd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:textColorHint="@color/hintcolor"
                android:textCursorDrawable="@drawable/text_cursor_base"
                android:textSize="16sp"
                app:met_iconLeft="@drawable/icon_psd"
                app:met_iconPadding="2dp"
                app:met_maxCharacters="15"
                app:met_primaryColor="@color/bg_select_color"
                app:met_singleLineEllipsis="true"
                app:met_underlineColor="@color/black" />

            <ImageView
                android:id="@+id/pwd_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="18dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/password_invisible"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_psd_sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:hint="@string/password_again"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:textColorHint="@color/hintcolor"
                android:textCursorDrawable="@drawable/text_cursor_base"
                android:textSize="16sp"
                app:met_iconLeft="@drawable/icon_psd"
                app:met_iconPadding="2dp"
                app:met_maxCharacters="15"
                app:met_primaryColor="@color/bg_select_color"
                app:met_singleLineEllipsis="true"
                app:met_underlineColor="@color/black" />

            <ImageView
                android:id="@+id/pwd_visible2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="18dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/password_invisible"
                android:visibility="gone" />
        </FrameLayout>

        <Button
            android:id="@+id/iv_register"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_not_selector"
            android:enabled="false"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/has_login"
        android:textSize="14sp" />
</RelativeLayout>